samples/errors/let_binding_odd_count.opal
;; Error: let bindings must come in name/value pairs — `x` has no value

(let main{}
(let [x y 10] (+ x y)))
